syntax = "proto3";

package sf.test.v1;

option go_package = "sink-kv/pb/proto;pbtest";

service TestService {
  rpc TestGet(TestGetRequest) returns (Tuple);
  rpc TestGetMany(TestGetManyRequest) returns (Tuples);
  rpc TestPrefix(TestPrefixRequest) returns (Tuples);
  rpc TestScan(TestScanRequest) returns (Tuples);
  rpc TestSleep(TestSleepRequest) returns (Response);
  rpc TestPanic(TestPanicRequest) returns (Response);
}

message TestGetRequest {
  string key = 1;
}

message TestSleepRequest {
  string request_id = 1;
  int32 duration = 2;
}

message TestPanicRequest {
  bool should_panic = 1;
}

message TestGetManyRequest {
  repeated string keys = 1;
}

message TestPrefixRequest {
  string prefix = 1;
  optional int32 limit = 2;
}

message TestScanRequest {
  string start = 1;
  string exclusive_end = 2;
  optional int32 limit = 3 ;
}

message Tuples {
  repeated Tuple pairs = 1;
}

message Tuple {
  string key = 1;
  string value = 2;
}

message Response {
  string output = 1;
}
